# faiss

./: .gitmodules  CMakeLists.txt  Makefile  README.md  blah.sql  compile_commands.json  cpu.out  duckdb-benchmark.patch  faiss-arm.patch  flame  flame2  out  reproduction.sql  vcpkg.json
duckdb/src/common/: CMakeLists.txt  allocator.cpp  box_renderer.cpp  cgroups.cpp  enum_util.cpp  exception.cpp  exception_format_value.cpp  extra_type_info.cpp  file_system.cpp  hive_partitioning.cpp  http_util.cpp  local_file_system.cpp  multi_file_list.cpp  multi_file_reader.cpp  printer.cpp  render_tree.cpp  string_util.cpp  symbols.cpp  types.cpp  virtual_file_system.cpp
duckdb/src/common/arrow/: arrow_merge_event.cpp  physical_arrow_collector.cpp
duckdb/src/common/enums/: statement_type.cpp
duckdb/src/common/exception/: binder_exception.cpp  catalog_exception.cpp  conversion_exception.cpp
duckdb/src/common/operator/: cast_operators.cpp
duckdb/src/common/row_operations/: row_aggregate.cpp
duckdb/src/common/serializer/: serializer.cpp
duckdb/src/common/sort/: partition_state.cpp  sort_state.cpp
duckdb/src/common/tree_renderer/: graphviz_tree_renderer.cpp  html_tree_renderer.cpp  json_tree_renderer.cpp  text_tree_renderer.cpp
duckdb/src/common/types/: CMakeLists.txt  batched_data_collection.cpp  blob.cpp  data_chunk.cpp  hugeint.cpp  interval.cpp  list_segment.cpp  string_heap.cpp  uhugeint.cpp  value.cpp  vector.cpp  vector_buffer.cpp
duckdb/src/common/value_operations/: comparison_operations.cpp
duckdb/src/execution/: CMakeLists.txt  column_binding_resolver.cpp  expression_executor.cpp  join_hashtable.cpp  physical_plan_generator.cpp  window_executor.cpp  window_segment_tree.cpp
(+716 files in other folders)
